# Finanacial-RAG

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: CLAUDE.md  settings.local.json
.claude/commands/: chunk.md  eval.md  index.md  ingest.md  notebook.md  retrieve.md
configs/: base.yaml
configs/experiments/: chunking_ablation.yaml  retrieval_ablation.yaml
data/eval/: experiment_log.jsonl  financebench.json
docs/phases/: _TEMPLATE.md  phase1_ingestion.md  phase2_processing.md  phase3_indexing.md  phase4_query.md  phase5_retrieval.md  phase6_generation.md  phase7_evaluation.md
frontend/: package-lock.json
notebooks/: 01_data_exploration.ipynb  02_chunking_experiments.ipynb  03_embedding_analysis.ipynb  05_eval_results.ipynb
scripts/: build_eval_dataset.py  build_index.py  download_filings.py  generate.py  parse_filings.py  process_filings.py  retrieve.py  run_eval.py
src/: pipeline.py
src/api/: __init__.py  main.py  models.py
src/evaluation/: experiment_tracker.py  models.py  ragas_evaluator.py  retrieval_metrics.py
src/generation/: context_assembler.py  generator.py  models.py  output_parser.py
src/indexing/: dense_indexer.py  embeddings.py  index_manager.py  sparse_indexer.py
src/ingestion/: html_parser.py  metadata_extractor.py  models.py  pdf_parser.py  sec_loader.py
src/processing/: chunkers.py  cleaner.py  enricher.py  models.py  table_serializer.py
src/query/: models.py  query_analyzer.py  query_decomposer.py  (+1 more)
(+47 files in other folders)
